added max bytes kafka